Tracking more metrics in MemoryMonitor - Determining and setting the memory limit is good enough for now

--- a/clean_folders.ipynb
+++ b/clean_folders.ipynb
@@ -1219,7 +1219,8 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import psutil"
    ]
   },
   {
@@ -1259,7 +1260,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patt = \"25.02.19*\"\n",
+    "# 25.02.18-22.24.22.json\n",
+    "patt = \"25.02.20-1*\"\n",
     "#patt = \"25.02.17-*\"\n",
     "\n",
     "paths = Path(\"benchmark\").glob(patt +\".json\")"
@@ -1327,20 +1329,59 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaeace30-7a4d-40c0-a0e4-37cf4a8288b0",
+   "id": "e8b4612c-e338-4b3e-8141-5909cdc09b73",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "Gib = 2**(3*10)\n",
+    "Gib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aaeace30-7a4d-40c0-a0e4-37cf4a8288b0",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "metrics = ['RSS', 'VMS', 'free_memory', 'per_process_limit']\n",
     "df = bnch_data[['stage',  'memory_log', 'experiment_id']]\n",
     "df1 = df.explode(\"memory_log\").reset_index()\n",
     "\n",
     "df2 = pd.json_normalize(df1[\"memory_log\"])\n",
+    "df3 = df1.join(df2) #.dropna()\n",
     "\n",
-    "df3 = df1.join(df2).dropna()\n",
-    "df3['memory_Gib'] = df3['memory'] / 1.074e+9\n",
     "df3['time'] = pd.to_datetime(df3['time'], unit='s')\n",
+    "\n",
+    "for metric in metrics:\n",
+    "    df3[metric + '_Gib'] = df3[metric] / Gib\n",
+    "\n",
+    "df3.sort_values('time',inplace=True)\n",
     "df3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09da2263-ff3e-407d-87af-adc12b8c5514",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc = px.line(df3, x = 'time', y = 'VMS' + '_Gib',color = 'stage', hover_name= \"experiment_id\") #facet_row='stage', experiment_id\n",
+    "display(sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beeebf75-f1b9-4b3c-ace1-39aee3ecf757",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc = px.line(df3, x = 'time', y = 'RSS' + '_Gib',color = 'stage', hover_name= \"experiment_id\") #facet_row='stage', experiment_id\n",
+    "display(sc)"
    ]
   },
   {
@@ -1350,7 +1391,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc = px.scatter(df3, x = 'time', y = 'memory_Gib', facet_row='stage', color = 'experiment_id')\n",
+    "sc = px.line(df3, x = 'time', y = 'per_process_limit' + '_Gib', color = 'experiment_id', \n",
+    "             hover_name= \"experiment_id\", hover_data= ['stage']) #facet_row='stage', experiment_id\n",
+    "display(sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7249ba2a-f53f-46a1-9f03-40c12bf173fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc = px.line(df3, x = 'time', y = 'free_memory' + '_Gib' ,  color = 'experiment_id', \n",
+    "             hover_name= \"experiment_id\", hover_data= ['stage']) #processes facet_row='stage',\n",
     "display(sc)"
    ]
   },
@@ -1361,9 +1415,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc = px.scatter(df3, x = 'time', y = 'processes', facet_row='stage', color = 'experiment_id')\n",
+    "sc = px.scatter(df3, x = 'time', y = 'num_threads', color = 'experiment_id', hover_name= \"experiment_id\") #processes facet_row='stage'\n",
     "display(sc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1381ce76-194a-4265-9a36-502209838ba4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1371,7 +1433,64 @@
    "id": "927e970a-9563-4cff-ac0c-8f88b9f5759e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_free_memory_bytes():\n",
+    "    with open('/proc/meminfo', 'r') as mem:\n",
+    "        free_memory = 0\n",
+    "        for i in mem:\n",
+    "            sline = i.split()\n",
+    "            if str(sline[0]) in ('MemFree:', 'Buffers:', 'Cached:'):\n",
+    "                free_memory += int(sline[1])\n",
+    "    return free_memory * 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a4ffe64-5c9a-4147-b077-ae1e736d9da8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wat = psutil.virtual_memory()._asdict()\n",
+    "for k in wat.keys():\n",
+    "    wat[k] = wat[k]/Gib\n",
+    "wat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e3d3e50-0504-41f7-9aac-bc66665c0a35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psutil_free_mem = psutil.virtual_memory().available\n",
+    "\n",
+    "\n",
+    "proc_free_mem = get_free_memory_bytes() #/ 1024**3\n",
+    "proc_free_mem /Gib "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b500617f-9137-4c79-b692-79ebd4eef2c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psutil_free_mem /Gib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4f56b80-7ede-4f2f-9276-e693407c546a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff = psutil_free_mem - proc_free_mem\n",
+    "diff / Gib"
+   ]
   },
   {
    "cell_type": "code",
@@ -1411,16 +1530,7 @@
    "outputs": [],
    "source": [
     "nonnas = bnch_data['exceptions'].notna()\n",
-    "exc = bnch_data.loc[nonnas] #,'exceptions']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25ac0bef-ad86-4616-a667-f7a405530ae9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "exc = bnch_data.loc[nonnas] #,'exceptions']\n",
     "exc"
    ]
   },
@@ -1435,7 +1545,71 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f6337a5-c0bc-4883-9be6-38bfbd2e575d",
+   "id": "a97435f0-af92-4930-b4c3-031fe588b15a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df4 = df3.explode(\"siblings\").reset_index()\n",
+    "df4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a81ae1e7-f470-4835-bf8f-ff1c6945be0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df5 = pd.json_normalize(df4[\"siblings\"])\n",
+    "df5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3593c93b-7d2a-4b5b-a0bf-4b69e3f712f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df6 = df4.join(df5)\n",
+    "erm = df6[\"siblings\"].notna()\n",
+    "df7 = df6.loc[erm]\n",
+    "df7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51a5f2aa-6c6e-4f5e-ad68-b748eb364119",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metric = 'vms' #'rss' #'data' #'text' #'shared' # \n",
+    "df7[metric + '_Gib'] = df7[metric] / 1024**3\n",
+    "df7['_pid'] = df7['_pid'].astype(int).astype(str)\n",
+    "df7['time'] = pd.to_datetime(df7['time'], unit='s')\n",
+    "df7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "431f28f6-2fd8-47f3-bcd2-e631fa776161",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "symbols = ['circle', 'circle-open']\n",
+    "sc = px.scatter(df7, x = 'time', y = metric + '_Gib' ,color = '_pid', \n",
+    "                hover_name= \"experiment_id\", symbol= \"stage\", symbol_sequence=symbols ) #facet_row='stage', experiment_id\n",
+    "display(sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9dc5c13-a58e-40f9-b7a5-1655f534518f",
    "metadata": {},
    "outputs": [],
    "source": []
