--- a/Spark.ipynb
+++ b/Spark.ipynb
@@ -101,7 +101,15 @@
    "id": "13692290-f4df-474f-b861-095623f1f808",
    "metadata": {},
    "source": [
-    "# TTS \n",
+    "# TTS \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "598aff3b",
+   "metadata": {},
+   "source": [
     "## Basic run just for test "
    ]
   },
@@ -115,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3012adb6-6d2c-49a4-8e04-eda485d271dd",
    "metadata": {},
    "outputs": [],
@@ -132,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3f2b1a90-97c5-42c5-be11-08cc4fdb709f",
    "metadata": {},
    "outputs": [],
@@ -151,22 +159,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a8688131-5656-4c4a-9525-75634809aaf5",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Chunker' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m chunker \u001b[39m=\u001b[39m Chunker(max_len\u001b[39m=\u001b[39m\u001b[39m200\u001b[39m)\n\u001b[1;32m      2\u001b[0m chunker\u001b[39m.\u001b[39msplit_text_into_chunks(processed)\n\u001b[1;32m      3\u001b[0m chunks \u001b[39m=\u001b[39m chunker\u001b[39m.\u001b[39mget_test_batch(\u001b[39m10\u001b[39m, \u001b[39m0\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Chunker' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "chunker = Chunker(max_len=200)\n",
     "chunker.split_text_into_chunks(processed)\n",
@@ -506,7 +502,7 @@
     "content = parser.read_latex(input_file)\n",
     "processed = parser.custom_latex_to_text(content)\n",
     "parser.save_text(processed, \"dbg/spec_my.txt\")\n",
-    "\n",
+    " \n",
     "tables = parser.get_tables()\n",
     "parser.save_text(tables, \"dbg/tables.tex\")"
    ]
