Run full grid experiment Add analitics of gathered data Add option to skip already existing experiments Add analitic environment

--- a/clean_folders.ipynb
+++ b/clean_folders.ipynb
@@ -86,7 +86,7 @@
     "# import sklearn \n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "\n",
+    "import pandasql as ps\n",
     "import os\n",
     "from datetime import datetime\n",
     "import statistics as stat\n",
@@ -97,7 +97,8 @@
     "# from ucimlrepo import fetch_ucirepo , dotdict\n",
     "pd.set_option('display.precision', 3)\n",
     "%matplotlib inline\n",
-    "pd.set_option('display.max_colwidth', None)"
+    "pd.set_option('display.max_colwidth', None)\n",
+    "pd.set_option('display.max_rows', 100)"
    ]
   },
   {
@@ -466,7 +467,7 @@
     "import numpy as np \n",
     "\n",
     "def BBW(text, maxlen = 60):\n",
-    "  ss = re.split(r'[ \\n]+', text)  \n",
+    "  ss = re.split(r'[ \\n]+', text)\n",
     "  lens = np.array([len(s)+1 for s in ss]) # lenghts of each word\n",
     "\n",
     "  if (max(lens)> maxlen):\n",
@@ -1220,6 +1221,7 @@
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
+    "import pandasql as ps\n",
     "import psutil"
    ]
   },
@@ -1242,7 +1244,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import display"
+    "from IPython.display import display\n",
+    "pd.set_option('display.max_rows', 100)"
    ]
   },
   {
@@ -1251,7 +1254,10 @@
    "id": "d94e32eb-a9b0-4e15-b8bd-0b40dc77ad5b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Gib = 2**(3*10)\n",
+    "Gib"
+   ]
   },
   {
    "cell_type": "code",
@@ -1261,7 +1267,7 @@
    "outputs": [],
    "source": [
     "# 25.02.18-22.24.22.json\n",
-    "patt = \"25.02.20-1*\"\n",
+    "patt = \"25.02.2*\"\n",
     "#patt = \"25.02.17-*\"\n",
     "\n",
     "paths = Path(\"benchmark\").glob(patt +\".json\")"
@@ -1291,8 +1297,7 @@
     "        with open(p,'r')as fp:\n",
     "            wat = json.load(fp)\n",
     "    except:\n",
-    "        print(p)\n",
-    "    \n"
+    "        print(p)\n"
    ]
   },
   {
@@ -1309,41 +1314,225 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "385b8f4a-4e9a-4f8c-91da-e028bfd467ef",
+   "id": "ab51fea6-5fec-4df5-82df-9855747ca25a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bnch_data = pd.concat(experiments)"
+    "bnch_data = pd.concat(experiments)\n",
+    "\n",
+    "#bnch_data.sort_values(\"time\", inplace=True)\n",
+    "bnch_data[\"max_memory_use\"] = bnch_data[\"max_memory_use\"] / Gib\n",
+    "bnch_data[\"max_memory_bytes\"] = bnch_data[\"max_memory_bytes\"] / Gib\n",
+    "bnch_data[\"text_volume\"] = bnch_data[\"chunk_length\"] * bnch_data[\"batch_size\"]\n",
+    "bnch_data[\"label\"] = bnch_data[\"stage\"] +  [\"_success\" if ex else \"_fail\" for ex in bnch_data.exceptions.isna()]\n",
+    "bnch_data[\"size\"] = 1.5\n",
+    "print(bnch_data.shape)\n",
+    "bnch_data.head()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9db78309-4565-4547-b1a9-1cb65b728942",
+   "id": "cc00ac1e-1c2e-4e21-9908-4b5dc98819e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bnch_data.sort_values(\"time\")"
+    "bnch_data.columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8b4612c-e338-4b3e-8141-5909cdc09b73",
+   "id": "bca68b90-f06d-4370-9abf-1a57adb62949",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "332156fb-f0c9-42ec-a709-772001026c73",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Gib = 2**(3*10)\n",
-    "Gib"
+    "sc = px.scatter(bnch_data, x = 'text_volume', y = 'run_time_sec',color = 'label', \n",
+    "                hover_name= \"experiment_id\") #facet_row='stage', experiment_id max_memory_use\n",
+    "display(sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "280c8e41-b1cf-4733-a9be-dfe5599a5b46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cases = bnch_data[[\"device\", \"tts_model\", \"vocoder_model\", \"chunk_length\", \"batch_size\"]]\n",
+    "cases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c16cec76-d024-4f19-9fbf-7bb1c5480f29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = bnch_data[['model_id', 'stage', 'max_memory_use', 'run_time_sec',\n",
+    "       'exceptions', 'memory_limit_bytes', 'n_threads', 'time',\n",
+    "       'experiment_id', 'avg_percent_silence', 'device',\n",
+    "       'tts_model', 'vocoder_model', 'chunk_length', 'batch_size',\n",
+    "       'max_memory_bytes', 'text_volume', 'label', 'size']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bff0968-6507-4c7c-84af-2b3c45c716ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = \"\"\"\n",
+    "select chunk_length, batch_size , stage, label, log(text_volume/run_time_sec) as time_effeciency, \n",
+    " log(text_volume/max_memory_use) mem_effeciency --, count(*) as cnt\n",
+    "from data\n",
+    "-- where stage = 'vocoder'\n",
+    "-- group by chunk_length, batch_size, label\n",
+    "-- having cnt > 1\n",
+    "-- order by cnt desc\n",
+    "\n",
+    "\"\"\"\n",
+    "wat = ps.sqldf(q)#.head(100)\n",
+    "wat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "977edb88-0096-4582-ab43-1f363eb8760f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.scatter(wat, color = 'label', x = 'batch_size', #log_y= True,  #size = 'size',run_time_sec  time_effeciency\n",
+    "                 y='chunk_length', facet_row='stage' #, height= 800 )#facet_col='stage', time_effeciency\n",
+    "               )  #, experiment_id     symbol = 'label', symbol_sequence=symbols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1815f40-1dba-42b0-9bce-5c01420bdca9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bnch_data.label.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6e5fa6d-e96a-4613-8b4d-df38b56d330d",
+   "metadata": {},
+   "source": [
+    "Styling Markers in Python \n",
+    "\n",
+    "https://plotly.com/python/marker-style/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "290f5c38-f4f3-4a92-a2df-37f0f8505d18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "mod = \"-open\"\n",
+    "#symbols = [ 'circle',  'square', 'square-x'] #'circle-x',\n",
+    "#symbols = [ 'triangle-nw',  'triangle-nw-open', 'triangle-se', 'triangle-se-open'] #'circle-x',\n",
+    "symbols = [ 'circle',  'circle', 'x'] #'circle-x',\n",
+    "#symbols = [x + mod for x in symbols ]\n",
+    "symbols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a4bf4c4-67ec-4ca4-9857-6dfd24ff9b2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bnch_data.sort_values(\"chunk_length\", ascending=False, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebc2e7b1-775e-44a7-8bcb-1f4d1ca46074",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#bnch_data[\"batch_size\"] = pd.Categorical(bnch_data[\"batch_size\"], ordered=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d245bb8-5178-4518-a9a3-d3984317e273",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bnch_data.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09aeff93-a25d-40fb-831a-5b883ededd77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc = px.scatter(bnch_data, color = 'batch_size', y = 'max_memory_use', #log_y= True,  #size = 'size',run_time_sec\n",
+    "                hover_name= \"experiment_id\",  x='chunk_length', hover_data=[\"batch_size\"] , #, height= 800 )#\n",
+    "                symbol = 'label', symbol_sequence=symbols )  #, experiment_id    facet_row='stage' \n",
+    "#animation_frame = 'batch_size'\n",
+    "display(sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e731f55-8574-4d00-809b-b1bb9875e5a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc = px.scatter(bnch_data, color = 'chunk_length', y = 'max_memory_use', #log_y= True,  #size = 'size',run_time_sec\n",
+    "                hover_name= \"experiment_id\",  x='run_time_sec', hover_data=[\"batch_size\", \"chunk_length\"] ,facet_row='stage')\n",
+    "#, height= 800 )#,symbol = 'label', symbol_sequence=symbols) #, experiment_id\n",
+    "display(sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9e1b016-c1d7-41b7-8e76-c7618ba354f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cec27e8-40a7-4b77-b528-f2e7bba734d3",
+   "metadata": {},
+   "source": [
+    "### ZOOM into memory log of individual experiments"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "aaeace30-7a4d-40c0-a0e4-37cf4a8288b0",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "metrics = ['RSS', 'VMS', 'free_memory', 'per_process_limit']\n",
@@ -1351,15 +1540,28 @@
     "df1 = df.explode(\"memory_log\").reset_index()\n",
     "\n",
     "df2 = pd.json_normalize(df1[\"memory_log\"])\n",
-    "df3 = df1.join(df2) #.dropna()\n",
+    "df2 = df1.join(df2,) #.dropna()\n",
     "\n",
-    "df3['time'] = pd.to_datetime(df3['time'], unit='s')\n",
+    "df2['time'] = pd.to_datetime(df2['time'], unit='s')\n",
     "\n",
     "for metric in metrics:\n",
-    "    df3[metric + '_Gib'] = df3[metric] / Gib\n",
+    "    df2[metric + '_Gib'] = df2[metric] / Gib\n",
+    "\n",
+    "\n",
+    "df3 = pd.concat([df2.sample(70000), df2[df2.RSS.isna()]],axis=0 )\n",
     "\n",
     "df3.sort_values('time',inplace=True)\n",
     "df3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "216d319f-0896-4cae-ad6d-8b5ee1bb8a1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3.shape"
    ]
   },
   {
@@ -1380,7 +1582,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc = px.line(df3, x = 'time', y = 'RSS' + '_Gib',color = 'stage', hover_name= \"experiment_id\") #facet_row='stage', experiment_id\n",
+    "sc = px.line(df3, x = 'time', y = 'RSS' + '_Gib',color = 'experiment_id', hover_name= \"experiment_id\") #facet_row='stage', experiment_id\n",
     "display(sc)"
    ]
   },
@@ -1418,14 +1620,6 @@
     "sc = px.scatter(df3, x = 'time', y = 'num_threads', color = 'experiment_id', hover_name= \"experiment_id\") #processes facet_row='stage'\n",
     "display(sc)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1381ce76-194a-4265-9a36-502209838ba4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1490,26 +1684,6 @@
    "source": [
     "diff = psutil_free_mem - proc_free_mem\n",
     "diff / Gib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a29b1ab9-0426-470b-accd-7aa1391ad108",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "83886080000 /   1.074e+9"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11f05468-3347-43dc-ac53-e97454aa5cc5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "0.8 * 0.8 * 40000 *1024*1024 /1.074e+9"
    ]
   },
   {
@@ -1605,21 +1779,13 @@
     "                hover_name= \"experiment_id\", symbol= \"stage\", symbol_sequence=symbols ) #facet_row='stage', experiment_id\n",
     "display(sc)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b9dc5c13-a58e-40f9-b7a5-1655f534518f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base]",
+   "display_name": "Python [conda env:analitic]",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "conda-env-analitic-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1631,7 +1797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
