--- a/Spark.ipynb
+++ b/Spark.ipynb
@@ -458,22 +458,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b776f65-e2b7-4101-b712-d6b2678a9ca3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fullgrid = {\"chunk_length\": range(50, 500, 50),\n",
-    "             \"batch_size\": (1, 2, 3, 5, 10, 20, 30, 50, 70, 100, 200),\n",
-    "             \"tts_model\": [\"tts-tacotron2-ljspeech\", \"another\"],\n",
-    "             \"vocoder_model\": [\"tts-hifigan-ljspeech\"],\n",
-    "             \"device\": [\"CPU\"], \n",
-    "       }\n",
-    "fullgrid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "2ebd4edd",
    "metadata": {},
    "outputs": [],
@@ -531,7 +515,7 @@
    "outputs": [],
    "source": [
     "bench = Bench()\n",
-    "bench.run_experiments(processed, smallgrid)"
+    "bench.run_experiments(processed, smallgrid, 1)"
    ]
   },
   {
@@ -570,6 +554,50 @@
    "outputs": [],
    "source": [
     "1270546432 /  1.074e+9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9eb9a821",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fullgrid = {\"chunk_length\": list(range(50, 1500, 135)),\n",
+    "             \"batch_size\": (1, 3, 5, 10, 20, 50, 70, 100, 125, 150, 200, 300),\n",
+    "             \"tts_model\": [\"tts-tacotron2-ljspeech\", ],\n",
+    "             \"vocoder_model\": [\"tts-hifigan-ljspeech\"],\n",
+    "             \"device\": [\"CPU\"], \n",
+    "       }\n",
+    "fullgrid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51681149",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"grid sizes:\")\n",
+    "print(\"-\"*20)\n",
+    "cases = 1\n",
+    "for k,v in fullgrid.items():\n",
+    "    cases = cases*len(v)\n",
+    "    print(k, \":\", len(v))\n",
+    "print(\"-\"*20)\n",
+    "print(\"total cases: \", cases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8884d8e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bench = Bench()\n",
+    "bench.run_experiments(processed, fullgrid)"
    ]
   },
   {
