Repartitioning the batches by text volume added

--- a/Spark.ipynb
+++ b/Spark.ipynb
@@ -127,11 +127,20 @@
     "import pandas as pd \n",
     "import torch\n",
     "\n",
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import pandas_udf, PandasUDFType, udf, col\n",
+    "from pyspark.sql import SparkSession, Window\n",
+    "from pyspark.sql.functions import pandas_udf, PandasUDFType, udf, col, lit, desc, floor\n",
+    "from pyspark.sql.functions import collect_list, flatten\n",
+    "from pyspark.sql import functions as F\n",
     "from pyspark.sql.types import *\n",
     "from pyspark import pandas as psp\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d5889cb3",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -253,34 +262,82 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b85de1ef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wtf = chunker.get_test_batch(3,53)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "2f7e1e98",
    "metadata": {},
    "outputs": [],
    "source": [
     "# psp.from_pandas(\n",
-    "chunks = spark.createDataFrame(chunker.get_test_batch(3,53))"
+    "chunks = spark.createDataFrame(chunker.get_test_batch(15,295))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afdb0955",
+   "id": "8c4ee18d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Apply the UDF\n",
-    "step1 = chunks.sort(\"text_len\", ascending=False) \n",
+    "text_volume_window = (Window.orderBy(desc('text_len'))\n",
+    "             .rowsBetween(Window.unboundedPreceding, 0))\n",
+    "# TODO: maybe can use partitionng here for separating whole text into chapters? \n",
+    "\n",
+    "text_volume_max  = 600 \n",
+    "\n",
+    "step1 = chunks.withColumn('cum_text_volume', F.sum('text_len').over(text_volume_window)) \\\n",
+    ".withColumn('part', floor(col('cum_text_volume')/lit(text_volume_max)) )\n",
     "step1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3aaa5792",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nparts =  step1.select((lit(1) + F.max(\"part\")).alias(\"npart\")).first()\n",
+    "nparts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89bec309",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nparts[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2c8eb51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step1.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "959915d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step1 = step1.repartitionByRange(nparts[0], \"part\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "371b4407",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step1.rdd.getNumPartitions()"
    ]
   },
   {
@@ -300,9 +357,7 @@
    "id": "919b5e60",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from pyspark.sql.functions import collect_list, flatten, length, size"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -331,17 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "step4.select(size(\"waveform\")).show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9cd511d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "274944 * 3"
+    "step4.select(F.size(\"waveform\")).show()"
    ]
   },
   {
@@ -362,16 +407,6 @@
    "outputs": [],
    "source": [
     "wfc = wf.cache()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29c95dc3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wat = wfc.first()"
    ]
   },
   {
@@ -407,16 +442,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0184186b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(waveform)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ab3f9a12",
    "metadata": {},
    "outputs": [],
@@ -441,32 +466,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "case_file = \"spark_test\"\n",
+    "case_file = \"output/spark_test\"\n",
     "\n",
     "\n",
     "print(\"saving sound\")\n",
     "narrator.save_audio(case_file + \".wav\",tens )\n",
     "print(\"done saving sound\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5db1794d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(wat[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f123e3c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(wat[0])"
    ]
   },
   {
