Added: Cut silence padding while applying pauses

--- a/Spark.ipynb
+++ b/Spark.ipynb
@@ -136,13 +136,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "d5889cb3",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4a2beffb",
@@ -206,31 +199,136 @@
    "source": [
     "\n",
     "# Get number of CPU cores\n",
-    "num_cpus = os.cpu_count() -1 \n",
+    "cpus_limit = os.cpu_count() -1 \n",
+    "mem_limit = \"1g\" # prod: \"16g\"\n",
     "\n",
     "# Configure PyTorch for CPU parallelism\n",
-    "torch.set_num_threads(num_cpus)\n",
+    "torch.set_num_threads(cpus_limit)\n",
     "\n",
     "# Create Spark session with configurations\n",
     "spark = SparkSession.builder \\\n",
     "    .appName(\"TTS CPU Inference\") \\\n",
     "    .master(\"local[*]\") \\\n",
-    "    .config(\"spark.executor.cores\", num_cpus) \\\n",
-    "    .config(\"spark.executor.memory\", \"16g\") \\\n",
-    "    .config(\"spark.task.cpus\", num_cpus) \\\n",
+    "    .config(\"spark.executor.cores\", cpus_limit) \\\n",
+    "    .config(\"spark.executor.memory\", mem_limit) \\\n",
+    "    .config(\"spark.task.cpus\", cpus_limit) \\\n",
     "    .config(\"spark.dynamicAllocation.enabled\", \"false\") \\\n",
     "    .config(\"spark.sql.shuffle.partitions\", \"1\") \\\n",
     "    .getOrCreate()\n",
     "\n",
     "print(f\"Spark version: {spark.version}\")\n",
-    "print(f\"Using {num_cpus} CPU cores for inference.\")\n",
+    "print(f\"Using {cpus_limit} CPU cores for inference.\")\n",
     "\n"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "27224dc8",
+   "id": "9e13a670",
+   "metadata": {},
+   "source": [
+    "## Playground for batching"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5af3dc60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef3b2f3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "waveforms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce425a79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mel_lens = narrator.add_pauses(sentences.sentence, mel_lengths, pause_dur=40)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9146fc96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mel_lengths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "733ce8c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mel_lens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65dd560e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = torch.tensor_split(waveforms.squeeze(1), len(waveforms), dim=0)\n",
+    "\n",
+    "#arr = [a[:, :l] for a, l in zip(arr, mel_lengths * self.hop_len)]\n",
+    "\n",
+    "# TODO: cut padding \n",
+    "arr = [a[:, :l].squeeze(0).numpy() for a, l in zip(arr, mel_lens * narrator.hop_len)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eea6e171",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a1c210f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(arr[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3977cdbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr[1].shape"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9f092c8b",
    "metadata": {},
    "source": [
     "## Pandas UDF approach \n"
@@ -250,10 +348,14 @@
     "  # TODO: non-default model initialization\n",
     "  narrator = Narrator()    \n",
     "  waveforms, mel_lengths = narrator.infer(sentences)\n",
-    "  arr = torch.tensor_split(waveforms.squeeze(1), len(waveforms), dim=0)\n",
-    "   # TODO: cut padding \n",
-    "  arr = [a[0].squeeze(0).numpy() for a in arr]\n",
     "\n",
+    "  arr = torch.tensor_split(waveforms.squeeze(1), len(waveforms), dim=0)\n",
+    "\n",
+    "  # Add more pause where needed (very naive currenty)\n",
+    "  mel_lengths = narrator.add_pauses(sentences, mel_lengths, pause_dur=40)   \n",
+    "  # Cut silence padding while applying pauses from above \n",
+    "  arr = [a[:, :l].squeeze(0).numpy() for a, l in zip(arr, mel_lengths * narrator.hop_len)]  \n",
+    "  \n",
     "  output = pd.DataFrame({\"waveform\": arr, \"mel_lengths\": mel_lengths})\n",
     " \n",
     "  return output\n"
@@ -350,14 +452,6 @@
     "\n",
     "step2 = step1.withColumn(\"prediction\", predict_batch_udf(col(\"sentence\"))).cache()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "919b5e60",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
