Added config examples
such as number of workers
tried run with two workers

--- a/Spark.ipynb
+++ b/Spark.ipynb
@@ -199,8 +199,16 @@
    "source": [
     "\n",
     "# Get number of CPU cores\n",
-    "cpus_limit = os.cpu_count() -1 \n",
-    "mem_limit = \"1g\" # prod: \"16g\"\n",
+    "# workers = 1\n",
+    "# cpus_limit = os.cpu_count() -1 \n",
+    "# mem_limit = \"1g\" # prod: \"16g\"\n",
+    "\n",
+    "# simulating a cluster with 2 workers\n",
+    "workers = 2\n",
+    "cpus_limit =  int(os.cpu_count()/ workers) -1 \n",
+    "mem_limit = \"2g\" # prod: \"16g\"/ workers\n",
+    "\n",
+    "\n",
     "\n",
     "# Configure PyTorch for CPU parallelism\n",
     "torch.set_num_threads(cpus_limit)\n",
@@ -210,15 +218,58 @@
     "    .appName(\"TTS CPU Inference\") \\\n",
     "    .master(\"local[*]\") \\\n",
     "    .config(\"spark.executor.cores\", cpus_limit) \\\n",
+    "    .config(\"spark.executor.instances\", workers) \\\n",
     "    .config(\"spark.executor.memory\", mem_limit) \\\n",
     "    .config(\"spark.task.cpus\", cpus_limit) \\\n",
     "    .config(\"spark.dynamicAllocation.enabled\", \"false\") \\\n",
     "    .config(\"spark.sql.shuffle.partitions\", \"1\") \\\n",
     "    .getOrCreate()\n",
     "\n",
+    "    # Additional configs that might be useful in future:\n",
+    "    # .config(\"spark.executor.resource.gpu.amount\", \"1\") \\\n",
+    "    # .config(\"spark.executor.memoryOverhead\", \"<memory>\"\n",
+    "\n",
     "print(f\"Spark version: {spark.version}\")\n",
     "print(f\"Using {cpus_limit} CPU cores for inference.\")\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "42e24b3c",
+   "metadata": {},
+   "source": [
+    "1. Memory Allocation and Executor Configuration\n",
+    "\n",
+    "    Spark executors are allocated a fixed amount of memory when the application starts. This memory is split between:\n",
+    "        JVM heap memory: For Spark tasks and operations.\n",
+    "        Off-heap memory: For operations like shuffle or caching.\n",
+    "        GPU memory (if applicable): Used by PyTorch or other frameworks.\n",
+    "    Memory allocation is configured using:\n",
+    "\n",
+    "--executor-memory <memory>\n",
+    "--driver-memory <memory>\n",
+    "--conf spark.memory.fraction=<fraction>\n",
+    "\n",
+    "2. Dynamic Resource Allocation\n",
+    "\n",
+    "    Spark can adjust resource allocation dynamically if dynamic resource allocation is enabled.\n",
+    "    Configuration:\n",
+    "\n",
+    "```\n",
+    "--conf spark.dynamicAllocation.enabled=true\n",
+    "--conf spark.dynamicAllocation.minExecutors=<min>\n",
+    "--conf spark.dynamicAllocation.maxExecutors=<max>\n",
+    "```\n",
+    "3. Task Partitioning and Locality\n",
+    "\n",
+    "    Spark divides the dataset into partitions, which determine the unit of work assigned to each executor.\n",
+    "    Smaller partitions reduce the likelihood of memory overload but increase overhead. Aim for ~128MB partition sizes for large datasets.\n",
+    "    Control partition size with:\n",
+    "```\n",
+    "--conf spark.sql.files.maxPartitionBytes=<size>\n",
+    "```"
    ]
   },
   {
